добавлены IllegalArgumentException  к методам countNextDay() и countPreviousDay(); добавлен NullPointerException  fixDescriptions()

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,6 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0' //Конвертер JSON, можно, если предпочитаете, использовать Jackson
     compile 'com.android.support:recyclerview-v7:25.0.0' //RecyclerView
-    compile 'com.squareup.picasso:picasso:2.5.2' //Picassp
+    compile 'com.squareup.picasso:picasso:2.5.2' //Picasso
     testCompile 'junit:junit:4.12'
 }
